--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -339,6 +339,8 @@ select:not([multiple]) {
     }
   }
 }
+
+
 /* Border more */
 .readmore-link,
 .readmore-link-white{
@@ -2809,7 +2811,33 @@ article.post-item.post-layout-classic {
   }
 
 }
-/* Custom VC Icon */
+
+/*
+ *  11.4 Custom vc Btn3
+ */
+
+.vc_general.vc_btn3{
+  font-weight: 600;
+  letter-spacing: 0.2em;
+
+  &.vc_btn3-size-md{
+    padding: 10px 33px;
+    &.vc_btn3-style-outline-custom,
+    &.vc_btn3-style-outline {
+      padding: 10px 33px;
+    }
+
+    &.vc_btn3-icon-left:not(.vc_btn3-o-empty){
+      padding-left: 48px;
+    }
+    &.vc_btn3-icon-right:not(.vc_btn3-o-empty){
+      padding-right: 48px;
+    }
+
+  }
+}
+
+
 
 /*
  *  11.4 Custom VC icon
