--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -445,7 +445,30 @@
 
 .form-wppp-select.products-per-page{
   float: left!important;
-  margin: 0 28px 0 0!important;
+  margin: 0 30px 0 0!important;
+}
+.woocommerce-before-shop{
+  select:not([multiple]){
+    min-width: 262px;
+    background: none;
+  }
+  form.products-per-page,
+  form.woocommerce-ordering{
+    position: relative;
+    &:after{
+      content: "\f107";
+      font-family: FontAwesome;
+      position: absolute;
+      top: 50%;
+      @include transform(translatey(-50%));
+      right: 12px;
+      font-size: 14px;
+      color: $primary-color;
+    }
+  }
+}
+.category-thumb{
+  margin-bottom: 30px;
 }
 
 /** ================================================
@@ -700,30 +723,90 @@ body{
 .woocommerce{
   .gridlist-toggle{
     float: right;
-    margin: 5px 0 30px;
+    margin: 0 0 30px;
     li{
       list-style: none;
       display: inline-block;
-      margin-right: 1px;
-      span{
-          margin-right: 5px;
-      }
+      margin-left: 10px;
+      float: left;
       a{
-        width: 30px;
-        height: 30px;
+        width: 40px;
+        height: 40px;
         border: 1px solid $border-color;
         display: block;
         text-align: center;
         line-height: 30px;
         color: $border-color;
+        position: relative;
         &:hover,
         &.active{
           background: $primary-color;
           border-color: $primary-color;
           color: $white;
         }
-        i{
-          line-height: 30px;
+        &.list{
+          span.style-toggle{
+            display: inline-block;
+            width: 20px;
+            height: 21px;
+            position: absolute;
+            @include translate();
+            span{
+              margin-left: 4px;
+              width: 16px;
+              height: 3px;
+              background: $border-color;
+              display: block;
+              margin-bottom: 3px;
+              position: relative;
+              &:last-child{
+                margin-bottom: 0;
+              }
+              &:before{
+                width: 3px;
+                height: 3px;
+                background: $border-color;
+                position: absolute;
+                left: -4px;
+                top: 0;
+                content: "";
+              }
+            }
+          }
+          &:hover,&:focus,&.active{
+            span.style-toggle{
+              span{
+                background: $white;
+                &:before{
+                  background: $white;
+                }
+              }
+            }
+          }
+        }
+        &.grid{
+          span.style-toggle{
+            display: inline-block;
+            width: 18px;
+            height: 18px;
+            position: absolute;
+            @include translate();
+            span{
+              width: 7px;
+              height: 7px;
+              border: 2px solid $border-color;
+              display: block;
+              float: left;
+              margin: 1px;
+            }
+          }
+          &:hover,&:focus,&.active{
+            span.style-toggle{
+              span{
+                border: 2px solid $white;
+              }
+            }
+          }
         }
       }
     }
@@ -1477,10 +1560,10 @@ body{
 		.cart{
 			.single_add_to_cart_button{
           letter-spacing: 0;
+          height: 40px;
           &.button{
             margin-right: 1px;
             float: left;
-            height: 40px;
             border: 2px solid $title-text;
             background: $title-text;
             color: $white;
@@ -1542,7 +1625,7 @@ body{
 	    text-align: center;
 	    > h3{
 	    	font-size: 36px;
-		    margin: 0 0 100px;
+		    margin: 0 0 40px;
 		    padding: 0 45px;
 		    text-transform: uppercase;
 		    display: inline-block;
