--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -322,6 +322,35 @@
     opacity: 0.5;
     display: block;
     line-height: 40px; }
+.woocommerce .woocommerce-per-page,
+.woocommerce .woocommerce-ordering {
+  float: left;
+  margin-bottom: 30px;
+  position: relative; }
+  .woocommerce .woocommerce-per-page select:not([multiple]),
+  .woocommerce .woocommerce-ordering select:not([multiple]) {
+    min-width: 262px;
+    background: none; }
+  .woocommerce .woocommerce-per-page:after,
+  .woocommerce .woocommerce-ordering:after {
+    font-family: FontAwesome;
+    content: "";
+    font-style: normal;
+    font-weight: normal;
+    position: absolute;
+    -webkit-transform: translateY(-50%);
+    -khtml-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    top: 50%;
+    pointer-events: none;
+    right: 12px;
+    font-size: 14px;
+    color: #82c14f; }
+.woocommerce .woocommerce-per-page {
+  margin-right: 30px; }
 
 .woocommerce.compare-button,
 .yith-wcwl-add-to-wishlist {
@@ -452,35 +481,6 @@
   .woocommerce-page .woocommerce-info :before,
   .woocommerce-page .woocommerce-message :before {
     display: none; }
-
-.form-wppp-select.products-per-page {
-  float: left !important;
-  margin: 0 30px 0 0 !important; }
-
-.woocommerce-before-shop select:not([multiple]) {
-  min-width: 262px;
-  background: none; }
-.woocommerce-before-shop form.products-per-page,
-.woocommerce-before-shop form.woocommerce-ordering {
-  position: relative; }
-  .woocommerce-before-shop form.products-per-page:after,
-  .woocommerce-before-shop form.woocommerce-ordering:after {
-    font-family: FontAwesome;
-    content: "";
-    font-style: normal;
-    font-weight: normal;
-    position: absolute;
-    -webkit-transform: translateY(-50%);
-    -khtml-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-    top: 50%;
-    pointer-events: none;
-    right: 12px;
-    font-size: 14px;
-    color: #82c14f; }
 
 .category-thumb {
   margin-bottom: 30px; }
@@ -707,7 +707,6 @@
 
 body .mCSB_inside > .mCSB_container, body .mCustomScrollBox > .mCSB_container {
   margin-right: 15px !important; }
-
 body .mCSB_scrollTools {
   width: 10px;
   background: #e5e5e5;
@@ -752,7 +751,8 @@ body .mCSB_scrollTools {
 *** ================================================*/
 .woocommerce .gridlist-toggle {
   float: right;
-  margin: 0 0 30px; }
+  margin: 0 0 30px;
+  padding: 0; }
   .woocommerce .gridlist-toggle li {
     list-style: none;
     display: inline-block;
@@ -830,11 +830,6 @@ body .mCSB_scrollTools {
           margin: 1px; }
       .woocommerce .gridlist-toggle li a.grid:hover span.style-toggle span, .woocommerce .gridlist-toggle li a.grid:focus span.style-toggle span, .woocommerce .gridlist-toggle li a.grid.active span.style-toggle span {
         border: 2px solid #FFFFFF; }
-
-.woocommerce .woocommerce-ordering,
-.woocommerce-page .woocommerce-ordering {
-  float: left;
-  margin-bottom: 30px; }
 
 /** ================================================
     3. Woocommerce product quickview
