--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -349,7 +349,8 @@ select:not([multiple]) {
     border-color: #252525; }
     .btn-default:hover {
       background: #82c14f;
-      border-color: #82c14f; }
+      border-color: #82c14f;
+      color: #FFFFFF; }
   .btn-accent {
     background: #82c14f;
     border-color: #82c14f;
