--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -295,6 +295,7 @@ select:not([multiple]) {
     &:hover{
       background: $primary-color;
       border-color: $primary-color;
+      color: $white;
     }
   }
   &-accent{
