--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -187,6 +187,7 @@
       text-indent: 0!important;
       position: absolute;
       width: 50%;
+      display: none!important;
     }
   }
 
@@ -660,26 +661,27 @@
     padding: 0 20px 20px;
     .bag-buttons-content{
     	margin: 0;
-    }
-    span{
-    	display: block;
-	    width: 100%;
-	    margin: 0 0 10px;
-	    &:last-child{
-	    	margin: 0;
-	    }
-	    a{
-	    	display: block;
-    		width:100%;
-	    }
-	    .btn{
-	    	padding-left: 0;
-		    padding-right: 0;
-		    display: block;
-		    &.btn-viewcart{
-		    	border-width: 2px;
-		    }
-	    }
+      > span{
+        display: block;
+        width: 100%;
+        margin: 0 0 10px;
+        &:last-child{
+          margin: 0;
+        }
+        a{
+          display: block;
+          width:100%;
+        }
+        .btn{
+          padding-left: 0;
+          padding-right: 0;
+          display: block;
+          font-weight: 600;
+          &.btn-viewcart{
+            border-width: 2px;
+          }
+        }
+      }
     }
 }
 
@@ -1272,6 +1274,18 @@ body{
 	    letter-spacing: 0;
 	    border: none;
 	    padding: 0;
+      &.loading{
+        text-indent: -999px;
+        overflow: hidden;
+        font-size: 0;
+        &:after{
+          @include FontAwesome('\f110');
+          @include animation(spin 2s linear infinite);
+          @include opacity(0.5);
+          @include translate();
+          font-size: 20px;
+        }
+      }
 	}
 }
 /** =========================
