--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -238,7 +238,7 @@ select:not([multiple]) {
   display: inline-block;
   line-height: 1.42857;
   padding: 8px 26px;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 14px;
   letter-spacing: 0.15em;
   text-transform: uppercase;
@@ -292,7 +292,7 @@ select:not([multiple]) {
     background: #252525;
     color: #FFFFFF;
     border-color: #252525;
-    &:hover{
+    &:hover,&:focus,&:active{
       background: $primary-color;
       border-color: $primary-color;
       color: $white;
